fix: Sidebar collapse

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -26,8 +26,17 @@ body {
 
     padding: 20px 0;
     margin: 0 10%;
-    // margin-left: 260px;
 
     height: calc(100vh - 80px);
   }
+}
+
+.ant-layout-sider-collapsed .ant-layout-sider-trigger {
+  width: 90px !important;
+  z-index: 1000 !important;
+}
+
+.ant-layout-sider-trigger {
+  width: 236px !important;
+  z-index: 1000 !important;
 }
